# shilljudge

./: .gitignore  CLAUDE.md  LICENSE  README.md  compose.yaml  pyproject.toml
.superpowers/sdd/: task-5-report.md
app/: .containerignore  .env.example  CLAUDE.md  Containerfile  README.md  app.py  auth.py  config.py  database.py  engagement.py  extensions_loader.py  hooks.py  models.py  pyproject.toml  scheduler.py  schemas.py  solana_client.py  token_storage.py  utils.py  x_client.py
app/tests/: conftest.py  test_api.py  test_database.py  test_extensions_wiring.py  test_public_submit.py  test_rescore_override.py  test_scheduler.py  test_static_serving.py  test_url_parsing.py
core/: CLAUDE.md  README.md  pyproject.toml
core/src/shilljudge_core/: __init__.py  auth.py  database.py  feature_flags.py  hooks.py  models.py  seed.py  token_storage.py  utils.py
core/tests/: conftest.py  test_database.py  test_feature_flags.py  test_hooks.py  test_models.py  test_url_parsing.py
docs/superpowers/plans/: 2026-06-25-public-paste-url-submission.md  2026-06-26-unify-shilljudge-monorepo.md
docs/superpowers/specs/: 2026-06-25-public-paste-url-submission-design.md  2026-06-26-dev-23-thread-management-self-reply-chains-design.md  2026-06-26-unify-shilljudge-monorepo-design.md
extensions/: MANIFEST_SCHEMA.md  loader.py
extensions/community/example-meme-scorer/: hooks.py  (+1 more)
extensions/tests/: conftest.py  test_loader.py
frontend/: Containerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  AuthContext.jsx  api.js  index.css
(+19 files in other folders)
