[project]
name = "thread-helper-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.10",
    "fastapi[standard]>=0.136.3",
    "itsdangerous>=2.2.0",
    "pydantic-settings>=2.0.0",
    "shilljudge-core",
    "slowapi>=0.1.9",
    "xdk>=0.9.0",
]

[tool.uv.sources]
shilljudge-core = { workspace = true }

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]