[project]
name = "shilljudge-core"
version = "0.1.0"
description = "Open-core foundation for X (Twitter) thread contest judging, auth, scoring and leaderboards (MIT self-hostable base)."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.scripts]
shilljudge-seed = "shilljudge_core.seed:seed_db"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shilljudge_core"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
